<resources>
    <string name="app_name">MaterialDialogsTesting</string>
    <string name="text_launch_dialog">launch dialog</string>
    <string name="text_ok">Ok</string>
    <string name="text_capture_input">Enter your name</string>
    <string name="text_enter_name">Enter your name</string>
</resources>